--- a/ps_prueba1.ipynb
+++ b/ps_prueba1.ipynb
@@ -114,7 +114,9 @@
     "# Volver a unir la lista en una cadena separada por comas\n",
     "updated_EMC_values = \",\".join(EMC_values_list)\n",
     "\n",
-    "print(updated_EMC_values)"
+    "print(updated_EMC_values)\n",
+    "\n",
+    "\n"
    ]
   },
   {
